--- a/src/styles/estilo.css
+++ b/src/styles/estilo.css
@@ -57,7 +57,7 @@ body {
     font-size: 60px;
     margin: 5px;
     cursor: pointer;
-    color: rgba(9, 53, 115, 0.0);
+    color: rgba(252, 250, 140);
     flex-wrap: wrap;
 }
 
